[tool.poetry]
name = "monitoring-olx"
version = "0.1.0"
description = ""
authors = ["ecaf1 <edeilsonazevedo22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
bs4 = "^0.0.2"
pytelegrambotapi = "^4.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
